<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Tab Layout -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/manage_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#121212"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIconTint="@drawable/tab_icon_tint"
        app:tabIndicatorColor="#EC7CEE"
        app:tabSelectedTextColor="@color/tab_text_selected"
        app:tabTextColor="@color/tab_text_unselected" />

    <!-- ViewPager2 for Switching Fragments -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/manage_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manage_tab_layout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
